test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/reexport_paths/src/lib_3_1.sw
library;

pub use std::ecr::EcRecoverError;

